# slackbuilds

./: README.md  SNIPPETS.TXT  uid_git.txt
apache-ant/: README  apache-ant.SlackBuild  apache-ant.info  slack-desc
elixir/: README  elixir.SlackBuild  elixir.info  slack-desc
erlang/: README  erlang-profile.csh  erlang-profile.sh  erlang.SlackBuild  erlang.info  slack-desc
frr/: README  frr.SlackBuild  frr.info  slack-desc
intel-microcode/: README  intel-microcode.SlackBuild  intel-microcode.info  slack-desc
iotop/: README  iotop.SlackBuild  iotop.info  slack-desc
john/: doinst.sh  john.SlackBuild  slack-desc
keepassxc/: README  keepassxc.SlackBuild  keepassxc.info  slack-desc
kernel-xanmod/: README  config-5.13.13-xanmod1  config-5.13.16-xanmod1  config-5.13.18-xanmod1  kernel-xanmod.SlackBuild  kernel-xanmod.info  slack-desc
libopenh264/: libopenh264.SlackBuild  libopenh264.info  slack-desc
nodejs/: README  nodejs.SlackBuild  nodejs.info  slack-desc
nvidia-kernel/: README  doinst.sh  nvidia-kernel.SlackBuild  nvidia-kernel.info  slack-desc
nvidia-xorg/: README  doinst.sh  nvidia-xorg.SlackBuild  nvidia-xorg.info  slack-desc
openjdk/: README  openjdk.SlackBuild  openjdk.info  slack-desc
postgresql/: README  doinst.sh  postgresql.SlackBuild  postgresql.info  rc.postgresql  slack-desc
protobuf/: README  protobuf.SlackBuild  protobuf.info  slack-desc
qemu/: qemu.SlackBuild  qemu.info  slack-desc
rnnoise/: rnnoise.SlackBuild  rnnoise.info  slack-desc
slack/: README  slack-desc  slack.SlackBuild  slack.info
smplayer/: README  slack-desc  smplayer.SlackBuild  smplayer.info
telegram/: README  slack-desc  telegram.SlackBuild  telegram.info
template/: rc.service  template.SlackBuild  template.info
tg_owt/: README  slack-desc  tg_owt.SlackBuild  tg_owt.info
thermald/: doinst.sh  rc.thermald  slack-desc  thermald.SlackBuild  thermald.info
tlp/: README  doinst.sh  slack-desc  tlp.SlackBuild  tlp.info
unbound/: README  doinst.sh  rc.unbound  slack-desc  unbound.SlackBuild  unbound.info
ungoogled-chromium/: 004-87-openscreen.patch  01-inkdrop.patch  01-ruy-block_map.patch  04-system-libdrm.patch  11-vdpau.patch  README  SHA256  args.gn  chromium-default  chromium-launcher.sh  doinst.sh  openscreen.patch  slack-desc  ungoogled-chromium.SlackBuild  ungoogled-chromium.info
ungoogled-chromium/patches/: 001-fix-char-traits.patch  002-fix-include.patch  003-fix-incomplete-type.patch  004-icu-fix.patch  005-icu-fix-2.patch  006-fix-system-openjpeg.patch  007-fix-system-xml.patch  008-remove-shim-hack.patch  009-icu-fix-3.patch
wireshark/: README  slack-desc  wireshark.SlackBuild  wireshark.info
zfs/: README  doinst.sh  rc.zfs  slack-desc  zfs.SlackBuild
