custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_official_build=true
ffmpeg_branding="Chrome"
proprietary_codecs=true
rtc_use_pipewire=false
link_pulseaudio=true
use_gnome_keyring=false
use_sysroot=false
use_custom_libcxx=false
enable_widevine=true
use_vaapi=true
is_debug=false
symbol_level=0
blink_symbol_level=0
use_ozone=false
chrome_pgo_phase=0
clang_use_chrome_plugins=false
enable_hangout_services_extension=false
enable_js_type_check=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
exclude_unwind_tables=true
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=0
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
