# Toolchain settings
chrome_pgo_phase=0
clang_use_chrome_plugins=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
fatal_linker_warnings=false
is_cfi=false
is_clang=true
optimize_webui=true
thin_lto_enable_optimizations=true
treat_warnings_as_errors=false
use_custom_libcxx=false
use_gold=false
use_lld=true
use_sysroot=false
use_thin_lto=true

# Host settings
host_toolchain="//build/toolchain/linux/unbundle:default"
target_cpu="x64"

# Disable debugs to reduce binary
blink_enable_generated_code_formatting=false
blink_symbol_level=0
dcheck_always_on=false
dcheck_is_configurable=false
enable_iterator_debugging=false
enable_pseudolocales=false
exclude_unwind_tables=true
is_debug=false
symbol_level=0

# Features
build_with_tflite_lib=false
disable_fieldtrial_testing_config=true
enable_js_type_check=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_swiftshader=false
enable_widevine=true
ffmpeg_branding="Chrome"
gtk_version=4
is_official_build=true
ozone_auto_platforms=false
ozone_platform_headless=true
ozone_platform="x11"
ozone_platform_x11=true
proprietary_codecs=true
rtc_build_examples=false
rtc_use_pipewire=false
use_gnome_keyring=false
use_kerberos=false
use_ozone=true
use_pulseaudio=true
use_system_freetype=false
use_system_harfbuzz=false
use_system_lcms2=false
use_system_libjpeg=false
use_system_libopenjpeg2=false
use_system_zlib=false
use_vaapi=true

# Required for build.
use_cups=true
enable_pdf=true
enable_print_preview=true

# Privacy
enable_hangout_services_extension=false
enable_mdns=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=0
use_official_google_api_keys=false
use_unofficial_version_number=false
